# ehall-backend

./: Cargo.toml  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
configs/: config.py
docs/: api.md  school_support.md
handlers/: login_handler.py  user_handler.py
models/: login_model.py
models/error/: error_model.py
models/login/: cas_login_model.py
routers/: login_router.py
rust/: adapters.rs  error.rs  lib.rs  main.rs  models.rs  routes.rs  services.rs  utils.rs
rust/adapters/: nnu.rs
rust/models/: user.rs
rust/services/: auth.rs
rust/utils/: cas.rs  crypto.rs
services/: cas_auth_service.py  course_table_service.py  score_rank_service.py  user_info_service.py  user_score_service.py
services/nnu/: cas_auth_service.py  course_table_service.py  score_rank_service.py  user_info_service.py  user_score_service.py
services/ysu/: cas_auth_service.py
utils/: cas_cache_utils.py  common_utils.py  encryption_utils.py  request_utils.py
utils/nnu/: cas_cache_utils.py
