[package]
name = "ehall-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
tower = { version = "0.4" }
futures = { version = "0.3" }

[lib]
path = "rust/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ehall-backend"
path = "rust/main.rs"
