[package]
name = "ehall-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["macros"] }
axum-auth = "0.7"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
reqwest = { version = "0.11", features = ["json", "cookies", "gzip"] }
regex = "1"
async-trait = "0.1"
tower = { version = "0.4" }
futures = { version = "0.3" }
cbc = "0.1"
# crypto = {version = "0.5", features = ["cipher", "aead"]}
rand = "0.8"
cipher = { version = "0.4", features = ["block-padding", "alloc"] }
aes = { version = "0.8" }
base64 = "0.22"
dashmap = { version = "5", features = ["inline"] }
lazy_static = "1"
log = "*"
env_logger = "0.11"

[dependencies.uuid]
version = "1.7.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[lib]
path = "rust/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "ehall-backend"
path = "rust/main.rs"

[profile.release]
lto = true
opt-level = 3
