[project]
name = "ehall-backend"
version = "0.3.2"
description = "A normal backend for eHall."
authors = [
    { name = "Genisys", email = "guh0613@icloud.com" },
]
dependencies = [
    "blinker>=1.8.2",
    "cachetools>=5.4.0",
    "certifi>=2024.7.4",
    "charset-normalizer>=3.3.2",
    "click>=8.1.7",
    "idna>=3.7",
    "itsdangerous>=2.2.0",
    "Jinja2>=3.1.4",
    "MarkupSafe>=2.1.5",
    "pycryptodome>=3.20.0",
    "requests>=2.32.3",
    "urllib3>=2.2.2",
    "Werkzeug>=3.0.3",
    "ddddocr>=1.5.5",
    "aiohttp>=3.10.1",
    "fastapi>=0.112.0",
    "uvicorn>=0.30.5",
    "httpx>=0.27.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
